[gd_scene load_steps=2 format=3 uid="uid://de3n0w7q504cq"]

[ext_resource type="Script" uid="uid://ct4s84uktqrdy" path="res://scenes/ui/about_app_dialog/about_app_dialog.gd" id="1_as1rl"]

[node name="AboutAppDialog" type="Window"]
title = "About"
initial_position = 2
size = Vector2i(800, 350)
unresizable = true
always_on_top = true
popup_window = true
min_size = Vector2i(800, 350)
script = ExtResource("1_as1rl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"WindowMarginContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VersionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
text = "Rivermod"
selection_enabled = true
drag_and_drop_selection_enabled = false

[node name="CopyrightLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
text = "Â©"
selection_enabled = true
drag_and_drop_selection_enabled = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreditsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
focus_mode = 2
text = "Uses:"
selection_enabled = true
drag_and_drop_selection_enabled = false

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Close"
